# beatsforrunning

./: .dockerignore  Dockerfile  EPIC.md  Makefile  README.md  client.py  final_walkthrough.md  index.html  pyproject.toml  requirements.txt  social.html  standards.md  strava.html  ui_design_prompt.md
.github/workflows/: ci.yml  deploy.yml
connectors/: spotify.py
core/: playlist.py
spotify/: client.py
src/beatsforrunning/: app.py
src/beatsforrunning/connectors/: spotify.py
src/beatsforrunning/core/: playlist.py  tempo.py
src/beatsforrunning/static/: app.js  index.html  leetify-theme.css
static/: app.js
tests/: conftest.py  test_app.py  test_basic.py  test_playlist_unit.py  test_spotify_unit.py  test_tempo_unit.py
tests/features/: TICKET-002-tempo.feature  TICKET-003-spotify.feature  TICKET-004-assembly.feature  TICKET-005-ui.feature  TICKET-006-ui-v2.feature  TICKET-008-spotify-widget.feature
tests/steps/: test_bdd_playlist.py  test_bdd_spotify.py  test_bdd_tempo.py  test_bdd_ui.py
tickets/: TICKET-001.md  TICKET-002-tempo.md  TICKET-003.md  TICKET-004-assembly.md  TICKET-005-web-ui.md  TICKET-006.md  TICKET-007-google-hosting.md  TICKET-008-spotify-widget.md  TICKET-008.md  TICKET-009-user-auth.md  TICKET-010-search-migration.md  TICKET-011-artist-preferences.md  TICKET-012-search-validation.md  TICKET-013-playlist-variety.md  TICKET-014-invalid-inputs.md  TICKET-015-tech-debt.md
